assets/css/style.css
body {
    background-color: white;
}

header {
    display: flex;
    justify-content: space-between;
    padding: 5px;
}

header a {
    color: purple;
    text-decoration: none;
}

#container {
    display: flex;
    flex-direction: column;
    gap: 20px;
    margin-top: 40px;
    width: 39%;
    margin-left: 30.5%;
}

#container p {
    text-align: center;
}

h1 {
    font-size: 40px;
    font-weight: bold;
    text-align: center;
}

#startBtn {
    background-color: purple;
    color: white;
    border: none;
    border-radius: 5px;
    font-size: 17px;
    padding: 2px 4px;
}

#btnContainer {
    display: flex;
    justify-content: center;
}

.question {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 20px;
    margin-top: 40px;
    font-weight: 600;
    font-size: 25px;
}


.options {
    display: flex;
    align-items: flex-start;
    flex-direction: column;
    margin-left: 5px;
}

.answer {
    text-align: left;
    background-color: purple;
    color: white;
    margin: 1px;
    border: none;
    border-radius: 5px;
    font-size: 17px;
    padding: 2px 4px;
}

#message {
    display: none;;
}

#message p {
    text-align: left;
    color: gray;
}

hr {
    background-color: gray;
}

#initialInput {
    margin: 5px;
}

#submit {
    background-color: purple;
    color: white;
    border: none;
    border-radius: 5px;
    font-size: 15px;
    padding: 2px 4px;
}

#msgContainer {
    display: flex;
    flex-direction: column;
    width: 39%;
    margin-left: 30.5%;
    margin-top: 10px;
}

button:hover {
    opacity: 50%;
}
button:active {
    border: dashed blue 2px;
}

